# clicker

./: .gitignore  LICENSE
tools/: README.txt  cleaner.ps1
win32-macro-app/: CMakeLists.txt  README.md
win32-macro-app/src/: main.cpp
win32-macro-app/src/include/: keyboard.h  macro_manager.h  mouse.h  script_runner.h
win32-macro-app/src/input/: keyboard.cpp  mouse.cpp
win32-macro-app/src/macro/: macro_manager.cpp
win32-macro-app/src/scripts/: script_runner.cpp
